[gd_scene load_steps=10 format=3 uid="uid://dbgcj3kdp0wgm"]

[ext_resource type="Script" path="res://Scripts/Characters/Small_Rat.gd" id="1_eu46e"]
[ext_resource type="Texture2D" uid="uid://uw7nyb2jgiiu" path="res://Assets/Textures/Characters/Small_Rat/small_rat_idle.png" id="2_jq40d"]
[ext_resource type="Texture2D" uid="uid://b1vjoyqppvvia" path="res://Assets/Textures/Characters/Small_Rat/rat_walk1.png" id="3_agu03"]
[ext_resource type="Texture2D" uid="uid://d2p1xtre6w1qi" path="res://Assets/Textures/Characters/Small_Rat/rat_walk2.png" id="4_bxsi5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2hymn"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jq40d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_agu03")
}, {
"duration": 1.0,
"texture": ExtResource("4_bxsi5")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_om1r5"]
size = Vector2(11, 2.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dthhw"]
size = Vector2(32, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjwfw"]
size = Vector2(15, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqh6l"]
size = Vector2(20, 0)

[node name="Small_Rat" type="CharacterBody2D"]
script = ExtResource("1_eu46e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_2hymn")
animation = &"idle"
speed_scale = 0.5

[node name="GetDamage" type="Area2D" parent="."]

[node name="GetDamage" type="CollisionShape2D" parent="GetDamage"]
position = Vector2(-0.5, -9.375)
shape = SubResource("RectangleShape2D_om1r5")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="DealDamage" type="Area2D" parent="."]

[node name="DealDamageLong" type="CollisionShape2D" parent="DealDamage"]
position = Vector2(0, 2.25)
shape = SubResource("RectangleShape2D_dthhw")

[node name="DealDamage" type="CollisionShape2D" parent="DealDamage"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_sjwfw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_aqh6l")

[connection signal="body_entered" from="GetDamage" to="." method="_on_get_damage_body_entered"]
[connection signal="body_entered" from="DealDamage" to="." method="_on_deal_damage_body_entered"]
